--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,6 +10,6 @@
   "support": "Support Moona",
   "links": "Hololive Links",
   "about": "About",
-  "iofi": "Moona Hoshinova's UFO",
+  "iofi": "Airani Iofifteen's UFO",
   "risu": "Ayunda Risu's Icebreaker Peanuts"
 }
