--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,5 +1,5 @@
 {
-    "short-title": "ムーあ",
+    "short-title": "ムーんあ",
     "long-title": "ムーナ・ホシノヴァの軌道! <(￣︶￣)> ムーナは悪くないようね~",
     "about-title": "ムーナ・ホシノヴァのサイト",
     "about-subtitle": "<a target='_blank' href='https://github.com/iDevoid/moona-orbit'>https://github.com/iDevoid/moona-orbit</a>",
