:zap: google form link voice contribution on about menu

--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -3,7 +3,7 @@
     "long-title": "Orbit-nya Moona Hoshinova! <(￣︶￣)> Bukan salah moona~",
     "about-title": "Website Moona Hoshinova",
     "about-subtitle": "<a target='_blank' href='https://github.com/iDevoid/moona-orbit'>https://github.com/iDevoid/moona-orbit</a>",
-    "about-description": "Ini adalah proyek pribadi yang dibuat dan dikelola oleh <a target='_blank' href='https://shoma.id'>iDevoid</a> untuk mendukung VTuber (Virtual YouTuber) Indonesia, untuk kesuksesan mereka. Siapapun boleh memperbaiki bahasa dan website ini.",
+    "about-description": "Ini adalah proyek pribadi yang dibuat dan dikelola oleh <a target='_blank' href='https://shoma.id'>iDevoid</a> untuk mendukung VTuber (Virtual YouTuber) Indonesia, untuk kesuksesan mereka. Siapapun boleh memperbaiki bahasa dan website ini.<br />Ingin berkontribusi? <a href='https://forms.gle/oV8B6dUiBF48TChB6' target='_blank'>kirim kesini! (Google form)</a>",
     "voice-button": "Tombol Suara",
     "youtube": "YouTube",
     "twitter": "Twitter",
