--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -3,7 +3,7 @@
     "long-title": "ムーナ・ホシノヴァの軌道! <(￣︶￣)> ムーナは悪くないようね~",
     "about-title": "ムーナ・ホシノヴァのサイト",
     "about-subtitle": "<a target='_blank' href='https://github.com/iDevoid/moona-orbit'>https://github.com/iDevoid/moona-orbit</a>",
-    "about-description": "This is a personal project made and maintained by <a target='_blank' href='https://shoma.id'>iDevoid</a> to support Indonesian VTuber (Virtual YouTuber), hoping for their success. Anyone is welcomed to improve the language and the site itself.",
+    "about-description": "これは、<a target='_blank' href='https://shoma.id'>iDevoid</a>がインドネシアのVTuber（仮想YouTuber）をサポートし、その成功を期待して作成および管理する個人的なプロジェクトです。 言語とサイト自体を改善することを誰でも歓迎します。<br />貢献したいですか？ <a href='https://forms.gle/oV8B6dUiBF48TChB6' target='_blank'>ここに提出してください！ （Googleフォーム）</a>",
     "voice-button": "ボイスボタン",
     "youtube": "YouTube",
     "twitter": "ツイッター",
