--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,7 @@
   "long-title": "Moona Hoshinova's Orbit! <(￣︶￣)> It's not moona's fault~",
   "about-title": "Moona Hoshinova's Website",
   "about-subtitle": "<a target='_blank' href='https://github.com/iDevoid/moona-orbit'>https://github.com/iDevoid/moona-orbit</a>",
-  "about-description": "This is a personal project made and maintained by <a target='_blank' href='https://shoma.id'>iDevoid</a> to support Indonesian VTuber (Virtual YouTuber), hoping for their success. Anyone is welcomed to improve the language and the site itself.",
+  "about-description": "This is a personal project made and maintained by <a target='_blank' href='https://shoma.id'>iDevoid</a> to support Indonesian VTuber (Virtual YouTuber), hoping for their success. Anyone is welcomed to improve the language and the site itself.<br />Want to contribute? <a href='https://forms.gle/oV8B6dUiBF48TChB6' target='_blank'>submit it here! (Google form)</a>",
   "voice-button": "Voice Button",
   "youtube": "YouTube",
   "twitter": "Twitter",
