:sparkles: new contributor card

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,5 +11,8 @@
   "links": "Hololive Links",
   "about": "About",
   "iofi": "Airani Iofifteen's UFO",
-  "risu": "Ayunda Risu's Icebreaker Peanuts"
+  "risu": "Ayunda Risu's Icebreaker Peanuts",
+  "contributors": "Contributors",
+  "contributions": "Contribution(s)",
+  "voice-clip": "Voice Clip"
 }
