--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -11,5 +11,8 @@
     "links": "Tautan Hololive",
     "about": "Tentang",
     "iofi": "UFO-nya Airani Iofifteen",
-    "risu": "Kacang Pemecah Es-nya Ayunda Risu"
+    "risu": "Kacang Pemecah Es-nya Ayunda Risu",
+    "contributors": "Kontributor",
+    "contributions": "Kontribusi",
+    "voice-clip": "Klip Suara"
 }
