--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -11,5 +11,8 @@
     "links": "ホロライブリンク",
     "about": "について",
     "iofi": "アイラニ・イオフィフティーンのユーフォー",
-    "risu": "アユンダ・リスの砕氷船ピーナッツ"
+    "risu": "アユンダ・リスの砕氷船ピーナッツ",
+    "contributors": "寄稿者",
+    "contributions": "貢献",
+    "voice-clip": "ボイスクリップ"
 }
