--- a/src/locales/jowo.json
+++ b/src/locales/jowo.json
@@ -11,5 +11,8 @@
     "links": "Sesambungan Hololive",
     "about": "Babagan",
     "iofi": "UFOne Airani Iofifteen",
-    "risu": "Kacang Pemecah Es e Ayunda Risu"
+    "risu": "Kacang Pemecah Es e Ayunda Risu",
+    "contributors": "Kontributor",
+    "contributions": "Kontribusi",
+    "voice-clip": "Klip Swara"
 }
